Fix spacing

--- a/css/to_do.css
+++ b/css/to_do.css
@@ -21,6 +21,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  align-items: flex-start;
   width: 500px;
   height: 750px;
   overflow: auto;
